--- a/DeliverUS-Frontend-Owner/package.json
+++ b/DeliverUS-Frontend-Owner/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.2.2",
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.4",
     "@react-navigation/native": "^6.1.3",
@@ -16,7 +17,7 @@
     "axios": "^1.3.2",
     "babel-plugin-import": "^1.13.6",
     "babel-plugin-inline-dotenv": "^1.7.0",
-    "expo": "^47.0.13",
+    "expo": "^47.0.14",
     "expo-image-picker": "~14.0.2",
     "expo-secure-store": "^12.0.0",
     "expo-status-bar": "^1.4.2",
@@ -30,18 +31,17 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "^0.18.12",
-    "yup": "^0.32.11",
-    "@expo/webpack-config": "^0.17.2"
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "cross-env": "^7.0.3",
     "eslint": "^8.33.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.32.2",
-    "cross-env": "^7.0.3"
+    "eslint-plugin-react": "^7.32.2"
   },
   "private": true
 }
