--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "migrate:backend": "cd DeliverUS-Backend && npm run migrate",
     "test:backend": "npm run migrate:backend && cd DeliverUS-Backend && npm test",
     "start:backend": "cd DeliverUS-Backend && npm start",
-    "start:frontend:owner": "cd DeliverUS-Frontend-Owner && npx cross-env NODE_OPTIONS=--openssl-legacy-provider expo start",
+    "start:frontend:owner": "cd DeliverUS-Frontend-Owner && npx cross-env NODE_OPTIONS=--openssl-legacy-provider npx expo start",
     "install:all:win": "npm run copy:env:win && npm run install:backend && npm run migrate:backend && npm run install:frontend:owner",
     "install:all:bash": "npm run copy:env:bash && npm run install:backend && npm run migrate:backend && npm run install:frontend:owner"
   }
 }
+ 
